--- a/deploy-models.ipynb
+++ b/deploy-models.ipynb
@@ -28,7 +28,9 @@
     "import yaml\n",
     "import sagemaker\n",
     "from sagemaker.pytorch import PyTorchModel\n",
+    "from sagemaker.predictor import json_serializer, json_deserializer\n",
     "from sagemaker import get_execution_role\n",
+    "\n",
     "\n",
     "with open('./config.yml', 'r') as stream:\n",
     "    config_dict = yaml.safe_load(stream)\n",
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,14 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sagemaker.pytorch import PyTorchModel\n",
-    "\n",
-    "\n",
-    "model = PyTorchModel(model_data=vgg19_state_dict_model_data,\n",
+    "nst_model = PyTorchModel(model_data=vgg19_state_dict_model_data,\n",
     "                     role=sagemaker_role,\n",
     "                     framework_version='1.5.0',\n",
     "                     py_version='py3',\n",
@@ -89,16 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using already existing model: NeuralStyleTransfer\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -108,10 +100,7 @@
     }
    ],
    "source": [
-    "from sagemaker.predictor import json_serializer, json_deserializer\n",
-    "\n",
-    "\n",
-    "nst_predictor = model.deploy(initial_instance_count = 1,\n",
+    "nst_predictor = nst_model.deploy(initial_instance_count = 1,\n",
     "                           instance_type = 'ml.p2.xlarge', #ml.c4.xlarge\n",
     "                           serializer=json_serializer,\n",
     "                           deserializer=json_deserializer,\n",
@@ -127,6 +116,96 @@
    "source": [
     "# Uncomment and call what deployed predictor is not necessary\n",
     "# nst_predictor.delete_endpoint()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deploying pretrained CycleGAN models (https://github.com/mashyko/pytorch-CycleGAN-and-pix2pix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PRETRAINED_MODELS_URL = 'http://efrosgans.eecs.berkeley.edu/cyclegan/pretrained_models/'\n",
+    "\n",
+    "STYLE_NAMES_LIST = ['style_monet', 'style_vangogh', 'style_cezanne', 'style_ukiyoe']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if len(sagemaker_session.list_s3_files(bucket=bucket, key_prefix='sagemaker/NST/models/cyclegan.tar.gz')) > 0:\n",
+    "    cyclegan_model_data = f's3://{bucket}/sagemaker/NST/models/cyclegan.tar.gz'\n",
+    "else:\n",
+    "    import pathlib\n",
+    "    import io\n",
+    "    import requests\n",
+    "    import urllib\n",
+    "    \n",
+    "    with tarfile.open('cyclegan.tar.gz', 'w:gz') as f:\n",
+    "        for style_name in STYLE_NAMES_LIST:\n",
+    "            model_file_name = f'{style_name}.pth'\n",
+    "            model_file_path = pathlib.Path(model_file_name)\n",
+    "            if not model_file_path.exists():\n",
+    "                urllib.request.urlretrieve(urllib.parse.urljoin(PRETRAINED_MODELS_URL, model_file_name), model_file_path)\n",
+    "            f.add(model_file_name)\n",
+    "    cyclegan_model_data = sagemaker_session.upload_data(path='./cyclegan.tar.gz', key_prefix='sagemaker/NST/models')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cyclegan_model = PyTorchModel(model_data=cyclegan_model_data,\n",
+    "                     role=sagemaker_role,\n",
+    "                     framework_version='1.5.0',\n",
+    "                     py_version='py3',\n",
+    "                     source_dir='./sagemaker/cyclegan/',\n",
+    "                     entry_point='cyclegan.py',\n",
+    "                     name='CycleGANStyleTransfer',\n",
+    "                    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------!"
+     ]
+    }
+   ],
+   "source": [
+    "cyclegan_predictor = cyclegan_model.deploy(initial_instance_count = 1,\n",
+    "                           instance_type = 'ml.m5.large',\n",
+    "                           serializer=json_serializer,\n",
+    "                           deserializer=json_deserializer,\n",
+    "                           endpoint_name='CycleGANStyleTransfer'\n",
+    "                          )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment and call what deployed predictor is not necessary\n",
+    "# cyclegan_predictor.delete_endpoint()"
    ]
   }
  ],
